# doc2deck

./: README.md  batch_process.sh  pyproject.toml  requirements.txt  setup.py
LLM_webapp/: app.py  cli.py  clients.py  config.py  model_listing.py  utils.py
LLM_webapp/templates/: index.html  results.html
templates/: index.html  list_models.html  results.html
